[project]
name = "cat-picture"
version = "0.1.0"
description = "I will show you a picture of a cat."
authors = [
    {name = "gogododo", email = "4dovidovi4@gmail.com"},
]
dependencies = []
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
